Updated deprecated methods.